# CAPSTONE-MODEL

./: .gitignore  Makefile  README.md  pyproject.toml
capstone_model/: __init__.py  dataset.py  features.py  plots.py
capstone_model/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA_WESAD.ipynb  Experiment1.ipynb  Experiment2.ipynb  kelly- experiment1.ipynb  kelly- experiment2.ipynb  kelly- experiment3.ipynb
