[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "capstone_model"
version = "0.0.1"
description = "Repo for Modelling and Experimentation Project"
authors = [
  { name = "Muhammad Iqbal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["capstone_model"]
include = ["pyproject.toml", "capstone_model/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["capstone_model"]
force-sort-within-sections = true

